# MP4Box_Viewer

./: CMakeLists.txt  README.md  script.sh
code/: main.cpp
code (version_1)/: MP4Box.h  main.cpp  utils.cpp
deploy/: mp4box
deploy (version_1)/: AppRun  default.desktop
